--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <Button
-        android:id="@+id/goToFirstBtn"
+<layout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="첫번째 액티비티로 이동하기"/>
-    <Button
-        android:id="@+id/goToSecondBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="두번째 액티비티로 이동하기"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
+
+        <Button
+            android:id="@+id/goToFirstBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="첫번째 액티비티로 이동하기"/>
+        <Button
+            android:id="@+id/goToSecondBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="두번째 액티비티로 이동하기"/>
 
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
